--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -111,6 +111,7 @@ camerlengo ,/n./@教皇内侍;
 cannonball ,/n./@炮弹;
 capability ,/n./@能力;,/n./@才能;
 capacities ,/n./@能力;
+capricious ,/adj./@善變的;,/adj./@任性的;,/adj./@突发奇想的;
 celebrated ,/adj./@有名的;
 censorship ,/n./@审查制度;
 centigrade ,/adj./@攝氏的;
@@ -303,6 +304,7 @@ excitement ,/n./@興奮;,/n./@激動;
 executable ,/adj./@可执行的;
 exhaustion ,/n./@枯竭;
 exhibition ,/n./@展览;
+exorbitant ,/adj./@過高的;,/adj./@過分的;,/adj./@離譜的;,/adj./@過度的;
 expectancy ,/n./@期待;
 expediency ,/n./@適宜;,/n./@權宜;
 expedition ,/n./@探险;
@@ -649,6 +651,7 @@ Scunthorpe ,/n./@斯坎索普;,/n./@斯肯索普;
 seamstress ,/n./@女裁縫;
 sedulously ,/adj./@勤勉的;
 seismology ,/n./@地震学;
+seminaries ,/redirected./@target="seminary";
 separately ,/adj./@分别的;,/adj./@分离的;
 separation ,/n./@分離;,/n./@間隔;,/n./@分開;
 Septuagint ,/n./@七十士譯本聖經;
