--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -155,6 +155,7 @@ examination ,/n./@考试;,/n./@测验;
 exceedingly ,/adv./@极其;,/adv./@非常;
 exceptional ,/adj./@例外的;
 exclamation ,/n./@感嘆;,/n./@呼喊;
+exorbitance ,/n./@過高;,/n./@過分;,/n./@過度;
 expectation ,/n./@期待;,/n./@预期;,/n./@指望;
 expectorate ,/v./@咳;,/v./@吐;,/v./@咯血;,/v./@咯;
 expenditure ,/n./@经费;
@@ -249,6 +250,7 @@ intercourse ,/n./@交流;,/n./@性交;,/n./@交往;,/n./@交媾;
 interesting ,/adj./@有趣的;
 interpreter ,/n./@譯員;
 interrogate ,/v./@审问;
+intervening ,/adj./@期间的;,/adj./@其间的;,/adj./@其中的;
 intoxicated ,/adj./@喝醉的;,/adj./@興奮的;,/adj./@陶醉的;
 intractable ,/adj./@棘手的;,/adj./@难治的;,/adj./@倔强的;,/adj./@不听话的;
 investigate ,/v./@调查;
@@ -415,6 +417,7 @@ temperature ,/n./@气温;
 termination ,/n./@终止;
 terminology ,/n./@术语;,/n./@术语学;
 tetrahedron ,/n./@四面體;
+theological ,/adj./@神學的;,/adj./@神學上的;
 theoretical ,/adj./@理論的;
 thermometer ,/n./@溫度計;
 thesauruses ,/redirected./@target="thesaurus";
