--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -104,8 +104,10 @@ excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
 experimental ,/adj./@实验性的;
 exploitation ,/n./@開發;,/n./@利用;
 extravagance ,/n./@奢侈;,/n./@浪費;
+Gemeinschaft ,/n./@社區;,/n./@團體;,/n./@社團;,/n./@集體;
 geometrician ,/n./@幾何學家;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
+Gesellschaft ,/n./@社會;,/n./@團體;,/n./@社團;,/n./@協會;,/n./@聚會;,/n./@集會;,/n./@組織;,/n./@機構;
 hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
@@ -134,6 +136,7 @@ insufficient ,/adj./@不足的;
 insurrection ,/n./@叛乱;,/n./@起义;
 intellectual ,/adj./@智力的;,/adj./@智慧的;
 intelligence ,/n./@智慧;
+intelligible ,/adj./@可理解的;,/adj./@明瞭的;,/adj./@清晰易懂的;,/adj./@明白易懂的;
 intermediary ,/n./@调解人;
 intermediate ,/adj./@中间的;
 intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
@@ -226,6 +229,7 @@ surprisingly ,/adv./@令人惊讶的;
 surroundings ,/n./@周遭;
 surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
+togetherness ,/n./@團結友愛;,/n./@和睦相處;,/n./@親密無間;
 transcendent ,/adj./@超常的;,/adj./@傑出的;,/adj./@超然的;,/adj./@卓越的;,/adj./@超越一切的;
 translucence ,/n./@半透明;
 translucency ,/n./@半透明;
