--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -17,6 +17,7 @@ circumference ,/n./@周圍;,/n./@圓周;
 circumvallate ,/v./@用城牆圍住;
 collaboration ,/n./@合作;,/n./@勾结;,/n./@通敌;
 communication ,/n./@交流;
+companionship ,/n./@情誼;,/n./@友誼;,/n./@交誼;,/n./@陪伴;,/n./@伴侶關係;
 comparability ,/n./@可比性;
 compassionate ,/adj./@有同情心的;
 complementary ,/adj./@补充的;
