--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -306,7 +306,7 @@ crime ,/n./@罪;
 crimp ,/n./@捲曲;,/n./@褶皺;
 crisp ,/adj./@鬆脆的;
 croak ,/v./@呱呱叫;,/vi./@咽气;
-crook ,/n./@骗子;,/n./@弯曲;,/n./@弯处;,/n./@坏蛋;
+crook ,/n./@骗子;,/n./@弯曲;,/n./@弯处;,/n./@坏蛋;,/v./@彎曲;,/n./@鉤;,/n./@曲柄杖;
 cross ,/v./@穿越;,/n./@叉形;,/n./@十字架;,/n./@十字标;,/adj./@横向的;,/adj./@斜线的;,/vt./@穿过;,/vt./@横穿;
 crowd ,/n./@人羣;
 crown ,/n./@王冠;
@@ -375,7 +375,7 @@ drone ,/n./@無人機;,/n./@雄蜂;
 drool ,/n./@口水;,/vi./@流口水;
 drunk ,/adj./@喝醉的@<drink的過去式>;
 dummy ,/adj./@假的;,/n./@傀儡;,/adj./@虛擬的;
-dutch ,/adj./@荷蘭的;,/adj./@荷蘭人的;,/adj./@荷蘭語的;
+Dutch ,/n./@荷蘭人;,/n./@荷蘭語;,/adj./@荷蘭的;,/adj./@荷蘭人的;,/adj./@荷蘭語的;
 dwarf ,/n./@矮子;,/n./@侏儒;
 dweeb ,/n./@愚昧;,/n./@白癡;
 dwell ,/v./@居住;
@@ -436,7 +436,7 @@ fable ,/n./@寓言;
 faint ,/n./@眩暈;
 faith ,/n./@信念;
 false ,/adj./@假@的;,/adj./@錯的;
-fancy ,/n./@幻想;
+fancy ,/n./@幻想;,/n./@迷戀;,/n./@爱慕;,/n./@想像;,/n./@想像力;,/n./@怪念頭;
 farce ,/n./@鬧劇;,/n./@胡鬧;
 fatal ,/adj./@致命的;
 fault ,/n./@錯誤;,/n./@過錯;
@@ -514,7 +514,7 @@ gamut ,/n./@全音階;,/n./@整個範圍;
 gauge ,/v./@測量;
 gaunt ,/adj./@憔悴的;,/adj./@荒凉的;,/adj./@枯瘦的;
 geese ,/n.//pl./@鵝;
-genre ,/n./@類型;,/n./@流派;
+genre ,/n./@類型;,/n./@流派;,/n./@体裁;
 genus ,/n./@屬;,/n./@種類;
 ghost ,/n./@鬼;,/n./@幽靈;
 giant ,/adj./@巨大的;,/n./@巨人;
