--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -830,6 +830,7 @@ lunacy ,/n./@精神失常;,/n./@愚蠢;
 luring ,/adj./@吸引人的;
 luxury ,/n./@奢侈;,/n./@奢侈品;
 lyceum ,/n./@演講廳;,/n./@音樂廳;,/n./@會堂;
+maggot ,/n./@蛆;,/n./@怪念頭;
 maiden ,/n./@少女;,/adj./@未婚的;
 malice ,/n./@惡意;,/n./@怨恨;,/n./@預謀;
 malign ,/v./@誹謗;,/v./@污衊;,/v./@中傷;
@@ -1092,7 +1093,7 @@ puttee ,/n./@綁腿布;,/n./@護腿布;,/n./@護腿皮;
 puzzle ,/v./@使困惑;,/n./@謎;
 pyrite ,/n./@硫化礦物;
 quadra ,/adj.//pref./@四的;
-quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
+quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;,/adj./@古怪的;
 quarry ,/n./@採石場;,/vt./@採得;,/vi./@採石;
 quartz ,/n./@石英;
 quasi- ,/pref./@類似的;,/pref./@準的;,/pref./@半的;
@@ -1126,6 +1127,7 @@ really ,/adv./@眞的;,/adv./@眞實地;
 realty ,/n./@房地產;,/n./@不動產;
 reason ,/n./@原因;
 rebate ,/n./@囘扣;,/n./@折扣;
+rebuke ,/vt./@指責;,/vt./@非難;,/vt./@訓斥;,/n./@指責;,/n./@非難;,/n./@訓斥;
 recall ,/v./@想起;,/v./@回憶;,/v./@找回;,/v./@撤銷;
 recast ,/v./@重铸;
 recede ,/v./@歸還;,/v./@撤回;,/v./@后退;,/v./@减弱;
@@ -1144,7 +1146,7 @@ reflow ,/v./@流回;,/v./@再漲;
 reform ,/v./@改革;
 refuge ,/n./@庇護所;
 refund ,/n./@退款;,/n./@退還;,/n./@償還;
-refuse ,/v./@拒絕;
+refuse ,/v./@拒絕;,/n./@垃圾;,/n./@廢物;,/vt./@拒受;,/vt./@拒給;
 refute ,/vt./@駁斥;,/vt./@反駁;,/vt./@駁倒;
 regard ,/v./@視爲;
 regent ,/n./@攝政王;,/n./@統治者;
@@ -1385,7 +1387,7 @@ steady ,/adj./@平穩的;,/adj./@穩健的;
 stench ,/n./@惡臭;
 stereo ,/n./@立體聲;
 sticky ,/adj./@棘手的;,/adj./@黏的;,/adj./@黏糊糊的;,/adj./@濕熱的;,/adj./@悶熱的;
-stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;,/vt./@悶死;
+stifle ,/v./@扼殺;,/v./@窒息;,/v./@藏匿;,/vt./@悶死;,/vt./@抑止;,/vt./@阻止;
 stigma ,/n./@恥辱;,/n./@污名;,/n./@污點;,/n./@柱頭;,/n./@眼點;
 stocky ,/adj./@矮胖的;
 stoned ,/v./@擲石頭;,/adj./@去核的;,/adj./@醉酒的;
