--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -343,7 +343,7 @@ crapper ,/n./@厠所;
 crevice ,/n./@裂縫;,/n./@裂隙;
 crimson ,/n./@深紅色;,/adj./@深紅色的;
 cripple ,/n./@跛子;,/v./@削弱;,/v./@使跛;
-crooked ,/adj./@彎曲的;
+crooked ,/adj./@彎曲的;,/adj./@歪的;,/adj./@變形的;,/adj./@扭曲的;,/adj./@不正當的;,/adj./@欺詐的;,/adj./@弯腰驼背的;,/adj./@歪斜的;
 crucial ,/v./@重要的;
 crucify ,/v./@在十字架上釘死;
 cruelly ,/adv./@殘忍地;
@@ -377,8 +377,8 @@ declare ,/v./@聲明;
 decline ,/v./@下降;,/v./@謝絕;
 decrypt ,/vt./@解碼;,/v./@解釋;
 default ,/n./@默認;,/v.//n./@拖欠;,/v.//n./@不履行;
-defence ,/n./@防衛;,/n./@防禦;
-defense ,/n./@答辯;
+defence ,/n./@防衛;,/n./@防禦;,/n./@防護;,/n./@保衛;,/n./@答辯;,/n./@抗辯;,/n./@國防;
+defense ,/redirected./@target="defence";
 defiant ,/adj./@挑釁的;
 deficit ,/n./@赤字;
 deflate ,/v./@收縮;,/v./@緊縮;
@@ -522,7 +522,7 @@ exactly ,/adv./@確切地;
 exalted ,/adj./@髙尚的;
 examine ,/v./@檢測;,/v./@檢查;
 example ,/n./@例子;
-excerpt ,/v./@摘錄;,/v./@引用;
+excerpt ,/n./@摘錄;,/n./@引用;,/n./@節選;,/n./@節錄;,/vt./@摘錄;,/vt./@節錄;
 exclaim ,/v./@呼喊;,/v./@感嘆;
 exclude ,/v./@排除;,/v./@排斥;
 execute ,/v./@執行;
@@ -571,6 +571,7 @@ firearm ,/n./@槍支;
 firefly ,/n./@螢火蟲;
 flatten ,/v./@變平;
 flatter ,/vt./@奉承;
+Flemish ,/adj./@弗蘭德斯的;,/adj./@弗蘭德斯人的;,/adj./@弗蘭德斯語的;,/n./@弗蘭德斯語;,/n./@弗蘭德斯人;
 flexure ,/n./@褶皺;,/n./@彎曲;,/n./@彈性;,/n./@柔性;
 flicker ,/v./@閃耀;
 foliage ,/n./@葉子;,/n./@葉飾;
@@ -610,7 +611,7 @@ Galicia ,/n./@加利西亞;
 gallant ,/adj./@勇敢的;,/adj./@英勇的;,/adj./@豪俠的;,/adj./@華麗的;
 gallery ,/n./@畫廊;
 gambler ,/n./@賭徒;
-garbage ,/n./@垃圾;
+garbage ,/n./@垃圾;,/n./@廢物;,/n./@廢話;
 garment ,/n./@衣服;,/n./@服裝;
 gaseous ,/adj./@氣體的;,/adj./@氣態的;
 gastric ,/adj./@胃的;
@@ -896,8 +897,8 @@ October ,/n./@十月;
 octopus ,/n./@章魚;
 odyssey ,/n./@歷險;,/n./@奧德賽;
 oestrus ,/n./@發情期;,/n./@發情;
-offence ,/n./@冒犯;,/n./@攻擊;
-offense ,/n./@冒犯;,/n./@進攻;
+offence ,/redirected./@target="offense";
+offense ,/n./@冒犯;,/n./@進攻;,/n./@犯法;,/n./@犯罪;,/n./@罪過;,/n./@攻擊;,/n./@過錯;
 officer ,/n./@官員;
 offside ,/n./@越位;
 ominous ,/adj./@不祥的;,/adj./@不吉的;,/adj./@預兆的;,/adj./@預示的;
@@ -1030,6 +1031,7 @@ predial ,/adj./@土地的;,/adj./@农业的;,/n./@农奴;
 predict ,/v./@預言;
 preempt ,/v./@先佔;,/v./@先取;
 preface ,/n./@序言;,/n./@前言;,/n./@引语;,/n./@开场白;
+prefect ,/n./@地方行政長官;,/n./@省長;,/n./@級長;
 prelude ,/n./@序言;,/n./@序曲;,/n./@前兆;
 premier ,/n./@首相;,/n./@總理;,/adj./@首要的;,/adj./@首位的;,/adj./@最先的;
 premise ,/v./@引出;,/v./@预先提出;,/n./@假定;,/n./@前提;
