--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -227,7 +227,7 @@ Columbia ,/n./@哥伦比亚;
 comedian ,/n./@喜劇演員;,/n./@滑稽演員;
 commence ,/n./@开始;
 commerce ,/n./@商业;
-communal ,/adj./@公用的;
+communal ,/adj./@公用的;,/adj./@公共的;,/adj./@共有的;,/adj./@集體的;,/adj./@公社制的;
 commuter ,/n./@通勤者;
 compiler ,/n./@编译器;
 complain ,/v./@投诉;
@@ -492,6 +492,7 @@ fidelity ,/n./@忠誠;
 filicide ,/n./@杀害子女;
 firework ,/n./@烟花;
 flagship ,/n./@旗舰;
+Flanders ,/n./@弗蘭德斯;
 flawless ,/adj./@完美的;
 fleeting ,/adj./@短暂的;
 flexible ,/adj./@灵活的;
@@ -807,7 +808,7 @@ nuisance ,/n./@讨厌的东西;,/n./@麻煩事;,/n./@妨害行為;
 numerous ,/adj./@大量的;
 nutrient ,/n./@營養物;,/n./@營養成分;,/adj./@營養的;
 obedient ,/adj./@服從的;,/adj./@順從的;,/adj./@聽話的;
-obituary ,/n./@誧告;
+obituary ,/n./@訃告;,/n./@訃聞;
 oblivion ,/n./@遗忘;,/n./@湮灭;,/n./@赦免;,/n./@無意識狀態;
 observer ,/n./@觀察員;
 obsidian ,/n./@黑曜石;
@@ -1045,6 +1046,7 @@ sedition ,/n./@煽动叛乱;
 sedulous ,/adj./@聚精会神的;,/adj./@勤勉的;
 semantic ,/adj./@語義的;
 semester ,/n./@學期;
+seminary ,/n./@神學院;,/n./@私立學校;
 sensible ,/adj./@明智的;
 sensuous ,/adj./@感官的;
 sentence ,/n./@句子;,/v./@判刑;
