--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -208,7 +208,7 @@ commodity ,/n./@商品;
 commotion ,/n./@騷亂;
 communism ,/n./@共產主義;
 communist ,/n./@共產主義者;
-community ,/n./@社会;
+community ,/n./@社会;,/n./@社區;,/n./@社团;,/n./@团体;,/n./@群落;
 companion ,/n./@同伴;,/n./@伴侶;
 competent ,/adj./@有能力的;
 complaint ,/n./@抱怨;
@@ -808,6 +808,7 @@ protester ,/n./@抗议者;
 prototype ,/n./@原型;,/n./@样本;,/n./@标准;
 provision ,/n./@提供;
 proximity ,/n./@親近;,/n./@接近;,/n./@鄰近;
+pseudonym ,/n./@假名;,/n./@筆名;,/n./@藝名;
 pubescent ,/adj./@青春期的;,/adj./@有軟毛的;
 pulmonary ,/adj./@肺的;
 pulsation ,/n./@脈動;,/v./@搏動;,/v./@悸動;,/v./@振動;
@@ -845,7 +846,7 @@ refulgent ,/adj./@輝煌的;,/adj./@燦爛的;
 refurbish ,/v./@刷新;
 regarding ,/prep./@关于;
 rehearsal ,/n./@排練;,/n./@彩排;
-reinforce ,/v./@加强;,/v./@增援;
+reinforce ,/v./@加强;,/v./@增援;,/vt./@強化;,/vt./@加固;,/vt./@加深;,/vt./@增加;
 rejection ,/n./@拒絕;
 religious ,/adj./@宗教的;
 reluctant ,/adj./@不願的;,/adj./@勉强的;
@@ -1054,6 +1055,7 @@ watermark ,/n./@水印;
 watershed ,/n./@分水嶺;
 weariness ,/n./@疲倦;
 Wednesday ,/n./@星期三;
+whimsical ,/adj./@異想天開的;,/adj./@怪誕的;,/adj./@古怪的;
 whirlwind ,/n./@旋风;
 whitewash ,/n./@石灰水;,/n./@粉飾;,/v./@粉刷;
 whosoever ,/pron./@任何人;
