--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -111,6 +111,7 @@ camerlengo
 cannonball
 capability
 capacities
+capricious
 celebrated
 censorship
 centigrade
@@ -303,6 +304,7 @@ excitement
 executable
 exhaustion
 exhibition
+exorbitant
 expectancy
 expediency
 expedition
@@ -649,6 +651,7 @@ Scunthorpe
 seamstress
 sedulously
 seismology
+seminaries
 separately
 separation
 Septuagint
