--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -830,6 +830,7 @@ lunacy
 luring
 luxury
 lyceum
+maggot
 maiden
 malice
 malign
@@ -1126,6 +1127,7 @@ really
 realty
 reason
 rebate
+rebuke
 recall
 recast
 recede
