--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -571,6 +571,7 @@ firearm
 firefly
 flatten
 flatter
+Flemish
 flexure
 flicker
 foliage
@@ -1030,6 +1031,7 @@ predial
 predict
 preempt
 preface
+prefect
 prelude
 premier
 premise
