--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -492,6 +492,7 @@ fidelity
 filicide
 firework
 flagship
+Flanders
 flawless
 fleeting
 flexible
@@ -1045,6 +1046,7 @@ sedition
 sedulous
 semantic
 semester
+seminary
 sensible
 sensuous
 sentence
