--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -808,6 +808,7 @@ protester
 prototype
 provision
 proximity
+pseudonym
 pubescent
 pulmonary
 pulsation
@@ -1054,6 +1055,7 @@ watermark
 watershed
 weariness
 Wednesday
+whimsical
 whirlwind
 whitewash
 whosoever
