--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -155,6 +155,7 @@ examination
 exceedingly
 exceptional
 exclamation
+exorbitance
 expectation
 expectorate
 expenditure
@@ -249,6 +250,7 @@ intercourse
 interesting
 interpreter
 interrogate
+intervening
 intoxicated
 intractable
 investigate
@@ -415,6 +417,7 @@ temperature
 termination
 terminology
 tetrahedron
+theological
 theoretical
 thermometer
 thesauruses
