--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -104,8 +104,10 @@ excruciating
 experimental
 exploitation
 extravagance
+Gemeinschaft
 geometrician
 gerontocracy
+Gesellschaft
 hallucinogen
 heterosexual
 hieroglyphic
@@ -134,6 +136,7 @@ insufficient
 insurrection
 intellectual
 intelligence
+intelligible
 intermediary
 intermediate
 intermission
@@ -226,6 +229,7 @@ surprisingly
 surroundings
 surveillance
 suspiciously
+togetherness
 transcendent
 translucence
 translucency
