--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -67,6 +67,7 @@ anyone ,/n./@任何人;
 anyway ,/adv./@不管怎樣;
 apache ,/n./@阿帕奇;
 apathy ,/n./@冷漠;
+apiece ,/adv./@每個;,/adv./@每人;,/adv./@每樣;,/adv./@各個;
 appall ,/v./@驚嚇;
 appeal ,/v./@上訴;,/v./@呼吁;,/adj./@有吸引力;
 appear ,/v./@出現;
