--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -497,6 +497,7 @@ English ,/n./@英語;
 engrave ,/v./@刻上;
 enhance ,/v./@增強;
 entitle ,/v./@題名;
+entropy ,/n./@熵;
 entwine ,/vt./@纏繞;,/vt./@糾纏;,/vt./@交錯;
 envelop ,/v./@包圍;,/v./@包裹;,/v./@圍繞;,/n./@信封;
 envious ,/adj./@嫉妒的;
@@ -1317,7 +1318,7 @@ surface ,/n./@表面;
 surgeon ,/n./@外科醫生;
 surmise ,/vt./@推測;,/vt./@猜測;,/vt./@臆測;
 surname ,/n./@名字;
-surpass ,/v./@超過;,/v./@優于;,/v./@多于;
+surpass ,/v./@超過;,/vt./@勝過;,/vt./@優於;,/vt./@多於;,/vt./@大於;
 surplus ,/n./@剩餘;,/n./@盈餘;,/n./@過剩;,/adj./@剩餘的;,/adj./@過剩的;
 survive ,/v./@存活;,/v./@幸存;
 suspect ,/v./@懷疑;
