--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1024,6 +1024,7 @@ sanction ,/n./@批准;,/n./@认可;
 Sanskrit ,/n./@梵文;,/n./@梵語;,/adj./@梵文的;,/adj./@梵語的;
 Saturday ,/n./@星期六;
 scaffold ,/n./@脚手架;,/n./@绞刑台;
+scandium ,/n./@鈧;
 scarcely ,/adv./@仅仅;
 scarcity ,/n./@不足;
 scathing ,/adj./@尖刻的;,/adj./@苛刻的;,/adj./@嚴厲的;,/adj./@傷害的;,/adj./@損傷的;
