--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -57,6 +57,7 @@ apocalypse ,/n./@启示;,/n./@天启;
 Apocalypse ,/n./@天启;
 apocryphal ,/adj./@假的;
 apoplectic ,/adj./@極度憤怒的;
+apothecary ,/n./@藥劑師;,/n./@藥材商;
 apparently ,/adv./@明显地;
 apparition ,/n./@鬼魂;,/n./@幽靈;,/n./@幻影;,/n./@幻象;,/n./@異象;
 appearance ,/n./@出现;,/n./@容貌;
@@ -251,6 +252,7 @@ difference ,/n./@差異;
 difficulty ,/n./@困难;
 digression ,/n./@離題;,/n./@脫軌;
 dilapidate ,/v./@毁坏;,/v./@荒废;
+diminutive ,/adj./@微小的;,/adj./@極小的;,/adj./@小的;,/adj./@指小的;,/n./@指小词;
 disability ,/n./@殘疾;,/n./@無能;
 disappoint ,/v./使@失望;
 disapprove ,/v./@不赞成;,/v./@不同意;
@@ -541,6 +543,7 @@ perpetrate ,/v./@犯@罪;
 persistent ,/adj./@固执的;,/adj./@坚持的;
 persuasion ,/n./@说服;
 perversion ,/n./@歪曲;,/n./@曲解;,/n./@誤用;,/n./@濫用;,/n./@腐蝕;
+pharmacist ,/n./@藥劑師;
 phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
@@ -592,6 +595,7 @@ psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
 quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
+quintuplet ,/n./@五胞胎之一;
 radicalism ,/n./@激进主义;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
