--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -31,6 +31,7 @@ arrangement ,/n./@布置;,/n./@整理;,/n./@准备;
 assassinate ,/v./@刺殺;,/v./@暗殺;
 association ,/n./@协会;
 attribution ,/n./@归因;,/n./@属性;
+avoirdupois ,/n./@常衡;
 bellybutton ,/n./@肚脐;
 benediction ,/n./@祝福;
 blockbuster ,/n./@轰动;,/n./@一鸣惊人者;
@@ -190,6 +191,7 @@ haemorrhage ,/redirected./@target="hemorrhage";
 handicapped ,/adj./@有殘疾的;
 haughtiness ,/n./@傲慢;
 headquarter ,/n./@總部;,/n./@司令部;
+Hellenistic ,/adj./@希臘文化的;,/adj./@希臘化的;,/adj./@古希臘時期的;
 holographic ,/adj./@全息攝影的;,/adj./@全息技術的;
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
