--- a/Files/lang/ch/chinese2.csv
+++ b/Files/lang/ch/chinese2.csv
@@ -15,6 +15,7 @@ im ,/pref./@否@定;,/pref./@相反;,/pref./@向内;,/pref./@入;
 in ,/prep./@在@裏;,/prep./@在@内;
 is ,/v./@是;
 it ,/pron./@它;
+lb ,/redirected./@target="libra";
 LV ,/abbr./@路易斯.威登;
 me ,/pron./@我;
 my ,/pron.//adj./@我的;
@@ -23,6 +24,7 @@ of ,/prep./@關於;,/prep./@屬於;
 on ,/prep./在@上@方;
 or ,/conj./@或者;
 ox ,/n./@牛;,/n./@公牛;
+oz ,/redirected./@target="ounce";
 PG ,/redirected./@target="parental guidance";
 re ,/adv.//pref./表@再@次;
 so ,/conj./@所以;,/adv./@如此;,/pron./@这样;
