--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -156,7 +156,7 @@ inn ,/n./@客棧;
 ion ,/n./@離子;
 jab ,/v./@戳;
 jag ,/n./@缺口;,/n./@鋸齒;,/n./@狂歡;
-jar ,/n./@罐;,/v./@震動;,/v./@刺激;
+jar ,/n./@罐;,/v./@震動;,/v./@刺激;,/n./@罈;,/n./@廣口瓶;
 jaw ,/n./@颚;
 jet ,/n./@噴氣式飛機;
 job ,/n./@工作;
