--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -124,6 +124,7 @@ carp ,/v./@挑剔;,/n./@鯉魚;
 cart ,/n./@手推車;
 case ,/n./@情況;
 cash ,/n./@現金;,/vt./@兑现;
+cask ,/n./@桶;,/n./@酒桶;,/n./@一桶的量;
 cast ,/v./@投擲;,/v./@投射;,/v./@闡明;,/n./@鑄模;,/n./@鑄件;,/n./@全體演員;,/n./@石膏;
 cave ,/n./@洞穴;
 cede ,/v./@放棄;,/v./@割讓;
@@ -242,6 +243,7 @@ down ,/adv./@向下;,/adv./@在下面;,/prep./@在...下方;
 doze ,/v./@瞌睡;
 drab ,/adj./@無趣的;
 drag ,/v./@拉;,/v./@拽;
+dram ,/redirected./@target="drachm";
 draw ,/v./@畫;,/v./@拉;,/v./@吸引;,/v./@開合;
 drop ,/v./@落@下;,/v./@掉落;
 drug ,/n./@藥物;,/n./@毒品;,/n./@麻醉劑;
@@ -368,6 +370,7 @@ gear ,/n./@齒輪;,/n./@裝置;,/n./@工具;
 geek ,/n./@極客;,/n./@怪人;
 germ ,/n./@微生物;,/n./@细菌;,/n./@种子;,/n./@胚芽;,/n./@萌生;
 gift ,/n./@禮物;,/n./@天賦;
+gill ,/n./@鰓;,/n./@基爾;,/n./@四分之一品脫;,/n./@及耳;,/n./@4液盎司的量;
 girl ,/n./@女孩;
 give ,/v./@給;
 glad ,/adj./@髙興的;
@@ -390,6 +393,7 @@ goth ,/n./@野蠻人;,/n./@哥特人;
 gown ,/n./@長袍;
 grab ,/v./@抓住;,/v./@奪走;,/vt./@霸占;
 grad ,/n./@畢業生;
+gram ,/n./@克;
 gray ,/adj./@灰色的;
 grew ,/v./<grow的過去式>@長大;
 grey ,/adj./@灰;,/adj./@灰色的;,/n./@灰色;,/v./@老化;
@@ -743,6 +747,7 @@ pill ,/n./@藥丸;,/n./@彈丸;
 pimp ,/v./@拉皮條;
 pine ,/n./@松樹;,/n./@松木;,/v./@哀悼;,/v./@渴望;,/v./@痛苦;
 pink ,/adj./@粉色的;
+pint ,/n./@品脫;,/n./@二分之一夸脫;,/n./@4基爾的量;,/n./@八分之一加侖;,/n./@16液盎司的量;
 pipe ,/n./@管子;,/n./@煙斗;,/n./@风笛;
 pish ,/n./@呸;
 piss ,/v./@小便;
