--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -243,6 +243,7 @@ choke ,/v./@噎;
 chump ,/n./@大肉片;,/n./@笨蛋;
 chunk ,/n./@大塊;
 churn ,/v./@攪拌;,/v./@攪動;
+cider ,/n./@蘋果酒;,/n./@蘋果汁;
 cigar ,/n./@雪茄;
 cinch ,/v./@緊握;
 claim ,/v./@聲稱;
@@ -675,6 +676,8 @@ leper ,/n./@麻风病人;
 let's ,/n.v./@我們去;
 level ,/n./@水平;,/n./@級別;
 lever ,/n./@槓桿;
+libra ,/n./羅馬@磅;,/n./@里拉;
+Libra ,/n./@天秤座;,/n./@天秤宮;
 light ,/n./@光;,/adj./@輕的;
 liken ,/v./@比拟;,/v./@比作;
 lilac ,/n./@丁香;,/adj./@淡紫色的;
@@ -808,6 +811,7 @@ order ,/n./@順序;,/v./@命令;,/n./@組織;
 organ ,/n./@器官;,/n./@風琴;,/n./@機構;
 other ,/adj./@其它的;
 ought ,/v./@應該;
+ounce ,/n./@盎司;,/n./@英兩;,/n./常衡@1/16磅的量;,/n./@液盎司;,/n./@1/16品脫的量;
 outer ,/adj./@外部的;,/adj./@外面的;
 outre ,/pref./@過度的;
 overt ,/adj./@明顯的;
@@ -839,7 +843,9 @@ pearl ,/n./@珍珠;
 pedes ,/n./@足;
 peeve ,/v./@惹惱;,/n./@氣惱;
 pekoe ,/n./@白毫;
+pence ,/redirected./@target="penny";
 penis ,/n./@陰莖;
+penny ,/n./@便士;
 penta ,/pref./@五;
 peril ,/n./@危險;
 petal ,/n./@花瓣;
@@ -879,6 +885,7 @@ porch ,/n./@門廊;
 porno ,/n./@色情;
 posit ,/vt./@假設;,/vt./@假定;
 potty ,/n./@厠所;,/n./@便壺;
+pound ,/n./@磅;,/n./@英鎊;,/vt./@搗碎;,/vt./@猛擊;,/vt./@敲打;,/n./@16盎司的量;
 power ,/n./@能量;,/n./@力;,/n./@權力;
 prank ,/n./@惡作劇;
 prawn ,/n./@對蝦;,/n./@明蝦;,/v./@捕蝦;
@@ -907,6 +914,7 @@ purse ,/n./@手提袋;
 putty ,/n./@油灰;
 Qatar ,/n./@卡塔爾;
 qualm ,/n./@疑虑;,/n./@不安;
+quart ,/n./@夸脫;,/n./@2品脫的量;,/n./@四分之一加侖;
 quasi ,/adj./@準的;,/adj./@類似的;
 queen ,/n./@女王;
 queer ,/adj./@奇妙的;,/adj./@古怪的;
