--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -136,7 +136,7 @@ banish ,/v./@放逐;,/v./@驅逐;,/vt./@驅除;
 banner ,/n./@旗幟;,/n./@橫幅;,/n./@標語;
 banter ,/v./@戲虐;,/n./@打趣;,/vi./@談笑;,/vt./@取笑;
 barley ,/n./@大麥;
-barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;
+barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;,/n./@大桶;,/n./@一桶的量;,/n./@36加侖的量;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
 barter ,/n./@易貨貿易;
 baryon ,/n./@重子;
@@ -188,6 +188,7 @@ bought ,/v./@買;
 bounce ,/v./@彈起;,/n./@跳躍;
 bovine ,/adj./@牛的;,/adj./@愚笨的;
 branch ,/n./@分支;
+brandy ,/n./@白蘭地酒;
 breach ,/n./@違反;,/n./@違背;,/n./@缺口;,/vt./@違反;,/vt./@破壞;,/vt./@打破;
 breast ,/n./@乳房;,/n./@胸部;
 breath ,/v./@呼吸;
@@ -217,6 +218,7 @@ bunker ,/n./@掩體;,/n./@地堡;,/n./@沙坑;
 burden ,/n./@重負;
 bureau ,/n./@局;,/n./@司;,/n./@辦公室;
 burial ,/n./@葬禮;
+bushel ,/n./@蒲式耳;,/n./@一蒲式耳的容器;,/n./@八加侖的量;
 butler ,/n./@男管家;,/n./@僕役長;
 butter ,/n./@黃油;
 button ,/n./@按鈕;,/n./@紐扣;
@@ -449,6 +451,7 @@ dorsum ,/n./@背;,/n./@背部;,/n./@背面;
 dotage ,/n./@溺爱;,/n./@老耄;,/n./@老迷糊;
 double ,/adj./@兩倍的;,/adj./@雙重的;,/adj./@二倍的;
 douche ,/v./@沖洗;
+drachm ,/n./@打蘭;,/n./@1/16盎司的量;,/n./藥衡@1/8盎司的量;
 drafty ,/adj./@有穿堂風的;,/adj./@有冷風吹過的;
 dragon ,/n./@龍;
 drawer ,/n./@抽匣;
@@ -546,6 +549,7 @@ famous ,/adj./@著名的;
 fandom ,/n./@影迷;
 fasten ,/v./@係牢;
 father ,/n./@父親;
+fathom ,/n./@英尋;,/n./@噚;,/vt./@測量...的深度;,/vt./@揣摸;,/vt./@推測;,/vt./@領會;
 faucet ,/n./@龍頭;,/n./@旋塞;,/n./@插口;
 fealty ,/n./@忠誠;
 feeble ,/adj./@虛弱的;
@@ -563,6 +567,7 @@ filter ,/n./@濾器;,/n./@濾鏡;,/v./@過濾;
 filthy ,/adj./@肮脏的;
 finish ,/v./@完成;
 finite ,/adj./@有限的;
+firkin ,/n./@費金桶;,/n./@九加侖的量;,/n./@小木桶;,/n./@1/2基德爾欽的量;
 fiscal ,/adj./@财政的;
 fitful ,/adj./@斷續的;,/adj./@斷斷續續的;,/adj./@反覆無常的;
 fixate ,/v./@註視;,/v./@固定;
@@ -609,6 +614,7 @@ furrow ,/n./@沟;,/n./@深痕;,/n./@皱纹;,/vt./@犁;
 futile ,/adj./@徒勞的;,/adj./@無用的;
 future ,/n./@未來;
 gadget ,/n./@小玩意;
+gallon ,/n./@加侖;,/n./@1/8蒲式耳的量;,/n./@4夸脫的量;,/n./@8品脫的量;,/n./@32基爾的量;,/n./@1/36桶的量;,/n./@128液盎司的量;
 gallop ,/v./@疾馳;
 gambit ,/n./@險招;,/n./@開局讓棋法;,/n./@開局;,/n./@話題;,/n./@開始;,/n./@開場白;
 gamble ,/v./@賭博;
@@ -810,7 +816,7 @@ likely ,/adj./@有可能的;
 linear ,/adj./@線性的;,/adj./@線狀的;
 linger ,/v./@徘徊;,/v./@逗留;,/v./@拖延;,/vi./@留存;
 lining ,/n./@夾裡;,/n./@襯裡;
-liquid ,/adj./@液態的;
+liquid ,/adj./@液態的;,/n./@液體;
 liquor ,/n./@酒;,/n./@汁;
 listen ,/vi./@聽;
 litter ,/n./@垃圾;,/v./@丟@垃圾;
