--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1258,6 +1258,7 @@ waitress ,/n./@女侍者;
 wardrobe ,/n./@衣柜;
 wasteful ,/adj./@挥霍的;
 watchful ,/adj./@注意的;,/adj./@警惕的;
+waterpot ,/n./@水罐;
 weakness ,/n./@弱点;
 werewolf ,/n./@狼人;
 whatever ,/pron./@無論什麼;
