--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -57,6 +57,7 @@ apocalypse
 Apocalypse
 apocryphal
 apoplectic
+apothecary
 apparently
 apparition
 appearance
@@ -251,6 +252,7 @@ difference
 difficulty
 digression
 dilapidate
+diminutive
 disability
 disappoint
 disapprove
@@ -541,6 +543,7 @@ perpetrate
 persistent
 persuasion
 perversion
+pharmacist
 phenomenal
 phenomenon
 philosophy
@@ -592,6 +595,7 @@ psychopath
 pubescence
 pugnacious
 quadcopter
+quintuplet
 radicalism
 radiosonde
 reasonable
