--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -124,6 +124,7 @@ carp
 cart
 case
 cash
+cask
 cast
 cave
 cede
@@ -242,6 +243,7 @@ down
 doze
 drab
 drag
+dram
 draw
 drop
 drug
@@ -368,6 +370,7 @@ gear
 geek
 germ
 gift
+gill
 girl
 give
 glad
@@ -390,6 +393,7 @@ goth
 gown
 grab
 grad
+gram
 gray
 grew
 grey
@@ -743,6 +747,7 @@ pill
 pimp
 pine
 pink
+pint
 pipe
 pish
 piss
