--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -243,6 +243,7 @@ choke
 chump
 chunk
 churn
+cider
 cigar
 cinch
 claim
@@ -675,6 +676,8 @@ leper
 let's
 level
 lever
+libra
+Libra
 light
 liken
 lilac
@@ -808,6 +811,7 @@ order
 organ
 other
 ought
+ounce
 outer
 outre
 overt
@@ -839,7 +843,9 @@ pearl
 pedes
 peeve
 pekoe
+pence
 penis
+penny
 penta
 peril
 petal
@@ -879,6 +885,7 @@ porch
 porno
 posit
 potty
+pound
 power
 prank
 prawn
@@ -907,6 +914,7 @@ purse
 putty
 Qatar
 qualm
+quart
 quasi
 queen
 queer
