--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -188,6 +188,7 @@ bought
 bounce
 bovine
 branch
+brandy
 breach
 breast
 breath
@@ -217,6 +218,7 @@ bunker
 burden
 bureau
 burial
+bushel
 butler
 butter
 button
@@ -449,6 +451,7 @@ dorsum
 dotage
 double
 douche
+drachm
 drafty
 dragon
 drawer
@@ -546,6 +549,7 @@ famous
 fandom
 fasten
 father
+fathom
 faucet
 fealty
 feeble
@@ -563,6 +567,7 @@ filter
 filthy
 finish
 finite
+firkin
 fiscal
 fitful
 fixate
@@ -609,6 +614,7 @@ furrow
 futile
 future
 gadget
+gallon
 gallop
 gambit
 gamble
