--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -232,6 +232,7 @@ chariot
 charity
 charter
 chassis
+chemist
 cherish
 chicken
 chimney
@@ -451,6 +452,7 @@ divulge
 dolphin
 doormat
 dormant
+drachma
 dragoon
 drastic
 dubiety
@@ -464,6 +466,7 @@ dwindle
 dynamic
 earflap
 earnest
+earthen
 ebonite
 echelon
 economy
@@ -1093,6 +1096,7 @@ quarter
 quibble
 quicken
 quickly
+quintal
 radiant
 radiate
 radical
