--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -35,6 +35,7 @@ agitation
 agreeable
 aimlessly
 albatross
+alchemist
 alcoholic
 algorithm
 alignment
@@ -491,6 +492,9 @@ handiwork
 hashtable
 hazardous
 heartfelt
+Hellenism
+Hellenist
+Hellenize
 heterodox
 hibernate
 highlight
@@ -596,6 +600,7 @@ jellyfish
 judgement
 judicious
 katabatic
+kilderkin
 kinematic
 knowledge
 laborious
