--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -31,6 +31,7 @@ arrangement
 assassinate
 association
 attribution
+avoirdupois
 bellybutton
 benediction
 blockbuster
@@ -190,6 +191,7 @@ haemorrhage
 handicapped
 haughtiness
 headquarter
+Hellenistic
 holographic
 hospitality
 humiliation
