update words and phrases

--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -368,6 +368,8 @@ holography ,/n./@全息技術;,/n./@全息攝影;
 homologous ,/adj./@相應的;,/adj./@同源的;,/adj./@類似的;
 horizontal ,/adj./@水平的;,/adj./@横的;
 horrendous ,/adj./@骇人的;,/adj./@可怕的;,/adj./@令人震惊的;,/adj./@極糟的;,/adj./@糟透了的;
+hyperbolic ,/adj./@雙曲線的;,/adj./@誇張的;
+hypodermic ,/adj./@皮下的;,/adj./@皮下注射用的;,/n./@皮下注射;,/n./@皮下注射器;
 hysterical ,/adj./@異常興奮的;,/adj./@歇斯底裏的;
 illuminate ,/v./@照明;
 illuminati ,/n./@光照派;
