--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -197,6 +197,7 @@ hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
 hydrologist ,/n./@水文學家;
+hyperactive ,/adj./@多動的;,/adj./@過度活躍的;,/adj./@亢奮的;,/adj./@亢進的;
 hypothermic ,/adj./@体温过低的;
 hypothesize ,/v./@假设;
 icosahedron ,/n./@二十面體;
@@ -438,6 +439,7 @@ treacherous ,/adj./@奸诈的;,/adj./@叛逆的;,/adj./@危险的;
 treasurable ,/adj./@值得珍爱的;
 troublesome ,/adj./@令人煩惱的;,/adj./@討厭的;,/adj./@麻煩的;,/adj./@困難的;
 ultraphonic ,/adj./@超声的;,/n./@超声;
+ultraviolet ,/adj./@紫外的;,/adj./@紫外線的;,/n./@紫外線;,/n./@紫外光;
 unbeknownst ,/adj./@不知道的;,/adj./@不知的;
 underground ,/adj./@在地下;,/adj./@地下的;,/n./@地铁;,/n./@地下组织;
 undoubtedly ,/adj./@毋庸置疑的;
