--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -113,6 +113,8 @@ heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
 housewarming ,/n./@乔迁庆宴;
 humanitarian ,/n./@人道主義者;,/adj./@人道主義的;
+hypochlorous ,/adj./@次氯化的;
+hypoglycemia ,/redirected./@target="hypoglycaemia";
 hypothetical ,/adj./@假设的;,/adj./@假言的;
 illumination ,/n./@照明;,/n./@启发;
 illustration ,/n./@阐明;,/n./@图示;
