--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -14,6 +14,7 @@ any ,/adj./@任何;,/pron./@任何;
 ape ,/n./@猨;,/v./@模仿;,/n./@模仿者;
 app ,/n./@應用;
 apt ,/adj./@有傾向的;
+arc ,/n./@弧;,/n./@弧形;
 are ,/v./@是;,/v./@有;
 ark ,/n./@約櫃;,/n./@方舟;
 arm ,/n./@胳膊;,/n./@武器;
