--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -613,6 +613,8 @@ hunch ,/n./@預感;,/n./@直覺;,/vi./@弓身;,/vt./@隆起;
 hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
 hyoid ,/n./@舌骨;,/adj./@舌骨的;
+hyper ,/redirected./@target="hyperactive";
+hypo- ,/pref./@在下;,/pref./@低;
 ideal ,/adj./@理想的;
 idiom ,/n./@成語;,/n./@習語;
 idiot ,/n./@笨蛋;,/n./@白痴;,/n./@傻子;
