--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -42,6 +42,7 @@ albeit ,/conj./@雖然;,/conj./@卽使;
 albion ,/n./@英格蘭@或不列顛的美稱;
 alcove ,/n./@凹处;
 alight ,/adj./@燒著的;
+alkali ,/n./@鹼;
 allege ,/v./@斷言;,/v./@宣稱;
 allude ,/v./@間接提到;
 allure ,/v./@吸引;
@@ -467,6 +468,7 @@ easily ,/adv./@容易地;
 editor ,/n./@編輯;,/n./@編者;
 efface ,/v./@擦掉;,/v./@抹去;
 effect ,/n./@影響;,/n./@效果;,/n./@作用;
+effigy ,/n./@肖像;,/n./@雕像;,/n./@模擬像;
 effuse ,/v./@流出;,/v./@湧出;,/v./@瀉出;
 egoism ,/n./@利己主義;
 elapse ,/v./@消逝;
@@ -714,6 +716,7 @@ humour ,/n./@幽默;,/n./@詼諧;,/vt./@遷就;
 hunger ,/n./@饑餓;
 hungry ,/adj./@饑餓的;
 hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;
+hyper- ,/pref./@在上;,/pref./@超過;,/pref./@過度;
 ignite ,/v./@點燃;,/vi./@燃燒;
 ignore ,/v./@忽視;,/v./@忽略;
 immune ,/v./@免疫;
@@ -1581,7 +1584,7 @@ vessel ,/n./@船;,/n./@艦;,/n./@血管;,/n./@容器;
 viable ,/adj./@可行的;,/adj./@可存活的;,/adj./@可生育的;
 victim ,/n./@受害者;
 vilify ,/v./@誹謗;,/v./@辱駡;,/vt./@诋毁;
-violet ,/n./@紫羅蘭;,/n./@紫色;,/adj./@紫色的;
+violet ,/n./@紫羅蘭;,/n./@紫色;,/adj./@紫色的;,/n./@紫蘿蘭色;,/adj./@紫蘿蘭色的;
 violin ,/n./@小提琴;
 virgin ,/n./@處女;
 virtue ,/n./@美德;
