--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -217,6 +217,7 @@ cashier ,/n./@出納;
 Caspian ,/adj./@裡海的;
 Catalan ,/adj./@加泰羅尼亞的;,/n./@加泰羅尼亞人;,/n./@加泰羅尼亞語;,/adj./@加泰羅尼亞人的;,/adj./@加泰羅尼亞語的;
 catchup ,/n./@番茄醬;
+caustic ,/adj./@腐蝕性的;,/adj./@苛性的;,/adj./@尖刻的;,/adj./@刻薄的;,/adj./@焦散的;
 caution ,/n./@警告;,/n./@註意;
 ceiling ,/n./@天花板;
 celsius ,/n./@攝氏;
@@ -454,6 +455,7 @@ doormat ,/n./@受氣包;
 dormant ,/adj./@休眠的;
 drachma ,/n./@德拉克馬;
 dragoon ,/n./@龍騎兵;,/n./@重騎兵;,/vt./@迫使;
+drapery ,/n./@有皺褶的布;,/n./@有皺褶的窗簾;,/n./@有皺褶的帳幔;,/n./@有皺褶的垂布;,/n./@衣紋;
 drastic ,/adj./@激烈的;
 dubiety ,/n./@懷疑;
 dubious ,/adj./@可疑的;,/adj./@不确定的;,/adj./@怀疑的;
@@ -1353,7 +1355,7 @@ terrain ,/n./@地形;,/n./@地勢;
 terrify ,/vt./@恐嚇;
 testify ,/v./@證明;,/v./@證實;,/v./@作證;
 tetanus ,/n./@破伤风;
-textile ,/n./@紡織品;
+textile ,/n./@紡織品;,/adj./@紡織的;
 texture ,/n./@質地;,/n./@紋理;,/n./@結構;,/n./@本質;
 theater ,/redirected./@target="theatre";
 theatre ,/n./@劇院;
@@ -1433,6 +1435,8 @@ vacancy ,/n./@空缺;,/n./@空位;,/n./@空白;,/n./@空虛;
 vaccine ,/n./@疫苗;
 vaginal ,/adj./@阴道的;,/adj./@葉鞘的;
 vagrant ,/adj./@流浪的;,/adj./@漂泊的;
+valence ,/n./@價;,/n./@原子價;,/n./@化合價;,/n./@掛布;,/n./@帷幔;,/n./@窗簾短幔;
+valency ,/n./@價;,/n./@原子價;,/n./@化合價;
 valiant ,/adj./@英勇的;
 vamoose ,/v./@匆匆離開;
 vampire ,/n./@吸血鬼;
