--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -291,6 +291,7 @@ denigrate ,/vt./@詆毀;,/vt./@毀謗;,/vt./@貶低;,/vt./@玷辱;
 deodorant ,/adj./@除臭的;,/n./@除臭劑;
 departure ,/n./@离开;,/n./@出发;,/n./@违背;
 dependent ,/n./@依赖性的;
+depiction ,/n./@描寫;,/n./@描繪;,/n./@描述;,/n./@描畫;,/n./@敘述;
 depravity ,/n./@堕落;
 deprecate ,/v./@反对;,/v./@抨击;
 desertion ,/n./@遺棄;,/n./@離棄;,/n./@逃亡;,/n./@逃跑;
@@ -377,7 +378,7 @@ encounter ,/v./@遇到;
 encourage ,/v./@鼓励;
 endeavour ,/v./@努力;
 endurance ,/n./@忍耐力;
-energetic ,/adj./@充满活力的;
+energetic ,/adj./@充满活力的;,/adj./@精力旺盛的;,/adj./@精力充沛的;,/adj./@精神飽滿的;
 enigmatic ,/adj./@神秘的;,/adj./@费解的;
 enlighten ,/v./@启发;,/v./@启蒙;
 enrapture ,/v./@使狂喜;,/v./@使著迷;
@@ -512,8 +513,11 @@ hubristic ,/adj./@傲慢的;,/adj./@自大的;,/adj./@自恃的;
 humiliate ,/v./@羞辱;
 hurricane ,/n./@颶風;
 hydraulic ,/adj./@水力的;,/adj./@液压的;
+hyperbola ,/n./@雙曲線;
 hypnotize ,/v./@吸引;
 hypocrisy ,/n./@虛僞;,/n./@僞善;
+hypomania ,/n./@輕度躁狂;
+hypomanic ,/adj./@輕度躁狂的;
 identical ,/adj./@相同的;
 illegible ,/adj./@無法辨認的;
 illogical ,/adj./@不合邏輯的;,/adj./@不合理的;
