--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -197,6 +197,7 @@ hospitality
 humiliation
 humiliatory
 hydrologist
+hyperactive
 hypothermic
 hypothesize
 icosahedron
@@ -438,6 +439,7 @@ treacherous
 treasurable
 troublesome
 ultraphonic
+ultraviolet
 unbeknownst
 underground
 undoubtedly
