--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -60,6 +60,8 @@ extraordinary
 globalization
 hallucination
 heterogeneous
+hyperactivity
+hypoglycaemia
 inappropriate
 incarceration
 inconceivable
