--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -42,6 +42,7 @@ albeit
 albion
 alcove
 alight
+alkali
 allege
 allude
 allure
@@ -467,6 +468,7 @@ easily
 editor
 efface
 effect
+effigy
 effuse
 egoism
 elapse
@@ -714,6 +716,7 @@ humour
 hunger
 hungry
 hybrid
+hyper-
 ignite
 ignore
 immune
