--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -217,6 +217,7 @@ cashier
 Caspian
 Catalan
 catchup
+caustic
 caution
 ceiling
 celsius
@@ -454,6 +455,7 @@ doormat
 dormant
 drachma
 dragoon
+drapery
 drastic
 dubiety
 dubious
@@ -1433,6 +1435,8 @@ vacancy
 vaccine
 vaginal
 vagrant
+valence
+valency
 valiant
 vamoose
 vampire
