--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -42,6 +42,7 @@ airstrip
 airtight
 alacrity
 allegory
+allergen
 allergic
 Alliance
 allocate
@@ -202,6 +203,7 @@ chestnut
 childish
 children
 chivalry
+chlorine
 ciborium
 cinnamon
 circular
