--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -291,6 +291,7 @@ denigrate
 deodorant
 departure
 dependent
+depiction
 depravity
 deprecate
 desertion
@@ -512,8 +513,11 @@ hubristic
 humiliate
 hurricane
 hydraulic
+hyperbola
 hypnotize
 hypocrisy
+hypomania
+hypomanic
 identical
 illegible
 illogical
