--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -60,6 +60,8 @@ extraordinary ,/adj./@特别的;,/adj./@非凡的;
 globalization ,/n./@全球化;
 hallucination ,/n./@幻覺;,/n./@妄想;,/n./@錯覺;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
+hyperactivity ,/n./@多動症;,/n./@亢奮;,/n./@過度活躍;
+hypoglycaemia ,/n./@低血醣症;
 inappropriate ,/adj./@不合适的;
 incarceration ,/n./@監禁;
 inconceivable ,/adj./@不可思議的;,/adj./@難以置信的;
