--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -12,6 +12,7 @@ discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
 dysproteinosis ,/n./@蛋白質缺乏症;
 ecclesiastical ,/adj./@教會的;,/adj./@教士的;
 gentrification ,/n./@中产阶级化;
+hypoallergenic ,/adj./@低過敏性的;,/adj./@低過敏原的;,/adj./@不易致過敏的;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
 impressionable ,/adj./@敏感的;,/adj./@易受影響的;
