--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -42,6 +42,7 @@ airstrip ,/n./@飛機跑道;
 airtight ,/adj./@无懈可击的;
 alacrity ,/n./@樂意;,/n./@欣然;
 allegory ,/n./@寓言;,/n./@諷喻;
+allergen ,/n./@過敏原;
 allergic ,/adj./@过敏性的;
 Alliance ,/n./@联盟;
 allocate ,/v./@分配;
@@ -202,6 +203,7 @@ chestnut ,/n./@栗子;,/n./@栗樹;
 childish ,/adj./@幼稚的;
 children ,/n./@孩子@们;
 chivalry ,/n./@騎士精神;,/n./@騎士風度;,/n./@騎士制度;
+chlorine ,/n./@氯;
 ciborium ,/n./@聖體盒;
 cinnamon ,/n./@桂皮;,/n./@肉桂树;,/n./@浅黄褐色;
 circular ,/adj./@循环的;
@@ -629,7 +631,7 @@ inferior ,/adj./@下级的;,/adj./@下等的;,/adj./@較差的;,/adj./@低等的
 infinite ,/adj./@无尽的;,/adj./@无穷的;,/adj./@无限的;
 infinity ,/n./@无穷;,/n./@无限;,/n./@无数;
 informal ,/adj./@非正式的;
-infrared ,/adj./@红外线的;
+infrared ,/adj./@红外线的;,/n./@紅外線;
 infringe ,/v./@侵權;
 inherent ,/adj./@固有的;
 initiate ,/v./@开始;,/v./@创始;
