--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -183,7 +183,7 @@ coniferous ,/adj./@结球果的;,/adj./@针叶树的;
 conjecture ,/n./@推测;
 connection ,/n./@连接;,/n./@联系;
 conscience ,/n./@良心;
-consensual ,/adj./@;兩愿的,/adj./@交感的;,/adj./@双方同意下成立的;
+consensual ,/adj./@两厢情愿的;,/adj./@交感的;,/adj./@在雙方同意下成立的;,/adj./@一致同意的;
 consistent ,/adj./@一致的;,/adj./@坚持的;,/adj./@始终如一的;
 conspiracy ,/n./@阴谋;,/n./@共谋;,/n./@密谋;
 constantly ,/adv./@经常地;
