--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -415,7 +415,7 @@ diagram ,/n./@圖表;
 dialect ,/n./@方言;
 dialogo ,/n./@對話;
 diamond ,/n./@鑽石;
-dictate ,/v./@口授;,/v./@命令;
+dictate ,/v./@口授;,/v./@命令;,/v./@口述;
 diction ,/n./@措辭;
 digital ,/adj./@數字的;
 dignify ,/vt./@使高貴;,/vt./@使有尊嚴;
@@ -838,7 +838,7 @@ midwife ,/n./@助产士;
 migrant ,/n./@移居者;
 migrate ,/v./@移居;
 million ,/n./@百萬;
-mindful ,/adj./@留心的;,/adj./@警覺的;
+mindful ,/adj./@留心的;,/adj./@警覺的;,/adj./@注意的;,/adj./@留意的;
 mineral ,/n./@礦物;,/adj./@礦物的;
 minimum ,/n./@最小値;
 minutia ,/n./@瑣事;,/n./@細節;
