--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -184,6 +184,7 @@ chocolate ,/n./@巧克力;
 chopstick ,/n./@筷子;
 Christian ,/n./@基督徒;
 cigarette ,/n./@香烟;
+cinematic ,/adj./@電影的;,/adj./@有电影特征的;
 circuitry ,/n./@电路;,/n./@电路系统;,/n./@电路装置;,/n./@电路元件;
 circulate ,/v./@循环;
 classical ,/adj./@經典的;,/adj./@古典的;
