--- a/Files/lang/molecular/phase-5/10-v4-c6.ph-5.zh.csv
+++ b/Files/lang/molecular/phase-5/10-v4-c6.ph-5.zh.csv
@@ -236,7 +236,7 @@ commercial ,/adj./@商業的;,/adj./@商務的;
 conjecture ,/n./@推测;
 prosperous ,/adj./@繁荣的;
 prosecutor ,/n./@檢察官;
-consensual ,/adj./@;兩愿的,/adj./@交感的;,/adj./@双方同意下成立的;
+consensual ,/adj./@兩愿的,/adj./@交感的;,/adj./@双方同意下成立的;
 procedural ,/adj./@过程式的;,/adj./@程序性的;
 commission ,/n./@委员会;,/n./@委任;
 conviction ,/n./@定罪;,/n./@确信;
