--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -705,7 +705,7 @@ Illyria ,/n./@伊利里亞;
 illyric ,/adj./@伊利里亞的;,/adj./@伊利里亞人的;
 imagine ,/v./@想象;
 imitate ,/v./@模仿;
-immerse ,/v./@沉浸于;,/vt./@浸泡;
+immerse ,/vt./@浸沒;,/vt./@浸泡;,/vt./@沉浸;,/vt./@施浸禮於;
 immoral ,/adj./@不道德的;,/adj./@堕落的;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
 impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;
