--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -534,7 +534,7 @@ late ,/adj./@遲@的;
 lava ,/n./@火山巖漿;
 lawn ,/n./@草坪;,/n./@草地;
 lazy ,/adj./@懶惰的;
-lead ,/v./@引領;,/n./@鉛;
+lead ,/v./@引領;,/n./@鉛;,/n./@領導;
 leaf ,/n./@葉子;
 leak ,/v./@泄露;
 lean ,/v./@傾斜;,/adj./@瘦的;,/n./@瘦肉;
