--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -47,6 +47,7 @@ allay ,/v./@減輕;
 alley ,/n./@小巷;,/n./@小路;,/n./@小徑;
 allot ,/v./@分配;,/v./@指定;
 allow ,/v./@允許;
+alloy ,/n./@合金;
 aloft ,/adv./@在空中;
 alone ,/adj./@獨自的;,/adj./@孤單的;
 along ,/adv./@一起;,/prep./@沿著;
