--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -869,7 +869,7 @@ meadow ,/n./@草地;,/n./@牧場;
 meddle ,/v./@干預;,/v./@管閑事;,/vi./@干涉;
 median ,/adj./@中間的;
 medium ,/n./@手段;,/n./@媒體;,/n./@媒介;,/adj./@中等的;,/adj./@適中的;,/n./@中庸;
-mellow ,/adj./@圓潤的;,/adj./@柔和的;,/adj./@成熟的;
+mellow ,/adj./@圓潤的;,/adj./@柔和的;,/adj./@成熟的;,/adj./@甘美的;,/adj./@芳醇的;
 melody ,/n./@旋律;
 member ,/n./@成員;,/n./@會員;
 memoir ,/n./@回憶録;,/n./@自傳;
@@ -1313,7 +1313,7 @@ signet ,/n./@圖章;,/n./@印章;
 signor ,/n./@先生;
 silage ,/n./@青貯飼料;
 silent ,/adj./@寂靜的;
-silver ,/n./@銀;
+silver ,/n./@銀;,/adj./@銀的;,/adj./@銀色的;,/adj./@鍍銀的;
 simple ,/adj./@簡單的;
 simply ,/adv./@簡單的;,/adv./@僅僅;
 singer ,/n./@歌手;
@@ -1350,6 +1350,7 @@ soccer ,/n./@足球;
 social ,/adj./@社會的;
 socket ,/n./@插座;
 soever ,/adj./@任何;
+solder ,/vt./@焊接;,/n./@焊錫;
 solemn ,/adj./@莊嚴的;
 solute ,/n./@溶質;,/n./@溶解物;
 sombre ,/adj./@灰暗的;,/adj./@昏暗的;,/adj./@沮丧的;,/adj./@严峻的;,/adj./@沉重的;
