--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -848,6 +848,7 @@ mission ,/n./@使命;,/n./@任務;
 mistake ,/n./@錯誤;
 mockery ,/n./@嘲弄;,/n./@笑柄;
 modesty ,/n./@謙虛;
+modular ,/adj./@模塊化的;,/adj./@組合式的;,/adj./@模的;,/adj./@模數的;,/adj./@模件的;,/adj./@分單元的;
 modulus ,/n./@係數;,/n./@模數;
 mollify ,/v./@平息;,/v./@撫慰;,/v./@緩和;
 momento ,/n./@紀念品;
@@ -982,6 +983,7 @@ perhaps ,/adv./@也許;,/adv./@可能;
 perjury ,/n./@僞證;,/n./@偽誓;,/n./@背信棄義;
 perplex ,/vt./@困惑;
 persist ,/v./@堅持;,/v./@固執;
+persona ,/n./@表面形象;,/n./@角色;,/n./@人物;,/n./@表象人格;
 pertain ,/vi./@屬於;,/vi./@關於;,/vi./@適合;
 perturb ,/vt./@煩擾;
 pervade ,/vt./@彌漫於;
