--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -848,6 +848,7 @@ mission
 mistake
 mockery
 modesty
+modular
 modulus
 mollify
 momento
@@ -982,6 +983,7 @@ perhaps
 perjury
 perplex
 persist
+persona
 pertain
 perturb
 pervade
